<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stopsTable"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/stopMainContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/stopName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:background="@color/lightBlue"
            android:gravity="left"
            android:text="@string/empty"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/stopDist"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".3"
            android:background="@color/stoprow_bg_main"
            android:gravity="center"
            android:text="@string/empty"
            android:textColor="@color/stoprow_txt_main" />
    </TableRow>

    <TableRow
        android:id="@+id/stopMainContainerRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageView
            android:id="@+id/stopImgView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:background="@color/lightBlue"
            android:contentDescription="@string/stops_img_desc"
            android:gravity="left" />

        <TextView
            android:id="@+id/stopDest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:background="@color/stoprow_bg_main"
            android:gravity="left"
            android:text="@string/stops_dest"
            android:textColor="@color/stoprow_txt_main"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </TableRow>

</TableLayout>