<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <TableRow
        android:id="@+id/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".2"
            android:background="@color/white"
            android:gravity="bottom|center"
            android:text="@string/app_name"
            android:textColor="@color/stoprow_txt_main"
            android:textSize="30sp"
            android:typeface="monospace" />
        
    </TableRow>

    <TableRow
        android:id="@+id/menuVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/versionNumber"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="6dp"
            android:layout_weight=".5"
            android:background="@color/white"
            android:gravity="bottom|center"
            android:text="@string/stops_ver"
            android:textColor="@color/stoprow_txt_main"
            android:textSize="15sp"
            android:typeface="monospace" />
        
    </TableRow>

    <TableRow
        android:id="@+id/designRow"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:gravity="center" >

        <ImageView
            android:id="@+id/designPadding0"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:contentDescription="@string/main_stops_button_desc"
            android:gravity="bottom|center"
            android:src="@color/stoprow_txt_main"
            android:text="@string/stops"
            android:textColor="@color/stoprow_txt_main" />
    </TableRow>

    <TableRow
        android:id="@+id/menuStops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/txt1"
        android:gravity="center" >

        <ImageView
            android:id="@+id/mainPadding1"
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@color/white"         
            android:contentDescription="@string/main_stops_button_desc"
            android:gravity="bottom|center"
            android:src="@color/bg3" />

        <ImageView
            android:id="@+id/mainStopsButton"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:contentDescription="@string/main_stops_button_desc"
            android:gravity="bottom|center"
            android:src="@drawable/main_table" />

        <TextView
            android:id="@+id/mainStopsTxt"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="2dp"
            android:layout_weight=".9"
            android:gravity="left|center_horizontal|center_vertical"
            android:padding="5dp"
            android:text="@string/stops"
            android:textColor="@color/stoprow_txt_main"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/mainPadding2"
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:contentDescription="@string/main_stops_button_desc"
            android:gravity="bottom|center"
            android:src="@color/bg3" />
    </TableRow>

    <TableRow
        android:id="@+id/menuFavs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/txt1"
        android:gravity="center" >

        <ImageView
            android:id="@+id/mainPadding3"
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@color/white"           
            android:contentDescription="@string/main_stops_button_desc"
            android:gravity="bottom|center"
            android:src="@color/bg3" />

        <ImageView
            android:id="@+id/mainFavsButton"
            android:layout_width="25dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:contentDescription="@string/main_favs_button_desc"
            android:gravity="center|bottom"
            android:src="@drawable/main_fav" />

        <TextView
            android:id="@+id/mainStopsMenuTitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight=".5"
            android:gravity="left|center_horizontal|center_vertical"
            android:padding="5dp"
            android:text="@string/favs"
            android:textColor="@color/stoprow_txt_main"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/mainPadding4"
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@color/white"            
            android:contentDescription="@string/main_stops_button_desc"
            android:gravity="bottom|center"
            android:src="@color/bg3" />
    </TableRow>
    
</TableLayout>