<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/routesListMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/txt1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/paddingStop1"
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:background="@color/txt1"
                android:contentDescription="@string/main_stops_button_desc"
                android:gravity="bottom|center"
                android:src="@color/bg3" />

            <TextView
                android:id="@+id/routesListTitle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".6"
                android:background="@color/bg3"
                android:gravity="left|center_vertical"
                android:padding="5dp"
                android:text="@string/hint_stops"
                android:textColor="@color/white"
                android:typeface="sans" />

            <ImageView
                android:id="@+id/stopsDetailerListRefreshButton"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:clickable="true"
                android:contentDescription="@string/main_stops_button_desc"
                android:src="@drawable/icon_refresh" />
        </TableRow>
        <!--
     future development 
        <TableRow
            android:id="@+id/routesListSubMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/txt1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/paddingStop2"
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:contentDescription="@string/main_stops_button_desc"
                android:gravity="bottom|center"
                android:src="@color/bg3" />

            <ImageView
                android:id="@+id/routesListIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:background="@color/darkBlue"
                android:contentDescription="@string/icon_desc" />

            <TextView
                android:id="@+id/routesListTimestamp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight=".9"
                android:background="@color/txt1"
                android:gravity="left"
                android:padding="5dp"
                android:text="2013.05.13 21:02 után"
                android:textColor="@color/stoprow_txt_main"
                android:textSize="10sp"
                android:typeface="sans" />

        </TableRow>
        -->

        <TableRow
            android:id="@+id/designRowStop"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/designPaddingStop1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:clickable="true"
                android:contentDescription="@string/main_stops_button_desc"
                android:gravity="bottom|center"
                android:src="@color/stoprow_txt_main"
                android:text="@string/stops"
                android:textColor="@color/stoprow_txt_main" />
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/empty" />

</LinearLayout>